src/ui/snapshots/kvn_tui__ui__layout__tests__draw_confirm_delete_overlay_snapshot.snap
---
source: src/ui/layout.rs
assertion_line: 528
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (1)               ││                                      │
│> Alpha vless 1.1.1.1:443             ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Confirm ─────────────────────────────────────┐               │
│               │           Delete selected profile?           │               │
│               │                                              │               │
│               │        Press y to confirm, n to cancel       │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41]
