src/ui/snapshots/kvn_tui__ui__layout__tests__draw_dns_settings_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 24)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ DNS ─────────────────────────────────────────┐               │
│               │                 DNS settings                 │               │
│               │                                              │               │
│               │       Preset: Cloudflare DoH (1.1.1.1)       │               │
│               │         Preset: Google DoT (8.8.8.8)         │               │
│               │          Preset: Quad9 DoH (9.9.9.9)         │               │
│               │        Preset: System resolver (local)       │               │
│               │          > Strategy: ‹ prefer_ipv4 ›         │               │
│               │                 Fake-IP: off                 │               │
│               │                                              │               │
│               │    j/k navigate, Enter confirm, Esc cancel   │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
