src/ui/snapshots/kvn_tui__ui__layout__tests__draw_error_overlay_snapshot.snap
---
source: src/ui/layout.rs
assertion_line: 537
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Error ───────────────────────────────────────┐               │
│               │                     Error                    │               │
│               │                                              │               │
│               │             something went wrong             │               │
│               │                                              │               │
│               │           Press any key to dismiss           │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41] something went wrong
