src/ui/snapshots/kvn_tui__ui__layout__tests__draw_help_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 40)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Help ────────────────────────────────────────┐               │
│               │Key          Action                           │               │
│               │j / Down     Move down                        │               │
│               │k / Up       Move up                          │               │
│               │g            Go to first                      │               │
│               │G            Go to last                       │               │
│               │Enter        Connect to selected profile      │               │
│               │p            Paste from clipboard             │               │
│               │d            Delete selected source           │               │
│               │m            Routing mode (popup list)        │               │
│               │o            Geo region                       │               │
│               │u            Update subscription or geo       │               │
│               │i            Cycle subscription auto-update   │               │
│               │e            Open profiles.json in $EDITOR    │               │
│               │a            Toggle auto-connect              │               │
│               │K            Toggle kill switch               │               │
│               │D            DNS settings                     │               │
│               │r            Reconnect                        │               │
│               │s            Stop / disconnect                │               │
│               │q / Esc      Detach TUI                       │               │
│               │Ctrl+C       Quit                             │               │
│               │?            Show this help                   │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
