src/ui/snapshots/kvn_tui__ui__layout__tests__draw_main_error_log_styling_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0 B/s   ↓ 0 B/s     Total ↑ 0 B   ↓ 0 B     0 connections                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (1)               ││normal info line                      │
│└ Alpha             vless  1.1.1.1:443││[error] sing-box exited with code 1   │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[CONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
