src/ui/snapshots/kvn_tui__ui__layout__tests__draw_routing_mode_overlay_snapshot.snap
---
source: src/ui/layout.rs
assertion_line: 551
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Routing Mode ────────────────────────────────┐               │
│               │              Select routing mode             │               │
│               │                                              │               │
│               │                    Global                    │               │
│               │                   Bypass RU                  │               │
│               │                   > Only RU                  │               │
│               │                                              │               │
│               │    j/k navigate, Enter confirm, Esc cancel   │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41]
