src/ui/snapshots/kvn_tui__ui__layout__tests__draw_sources_connected_profile_colored.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (2)               ││                                      │
│├ Alpha             vless  1.1.1.1:443││                                      │
│└ Beta              vless  2.2.2.2:443││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[CONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
